Fixed one type on qr-code-scan

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--The content below is only a placeholder and can be replaced.-->
+git<!--The content below is only a placeholder and can be replaced.-->
 <mat-toolbar color="primary">
   {{ title }}
 </mat-toolbar>
